Added correlation matrix and finished the eda

--- a/ProjectEDA.ipynb
+++ b/ProjectEDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
     "from sklearn.preprocessing import MinMaxScaler,StandardScaler\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "\n",
+    "#show the difference between the apartment types count (4 overall types)\n",
     "df=pd.read_csv(\"NY Realstate Pricing.csv\")\n",
     "rooms_count=df['room_type'].value_counts().unique()\n",
     "rooms_type=df['room_type'].unique()\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,6 +103,8 @@
     }
    ],
    "source": [
+    "#dividing the apartments types to pie charts and finding the percentage of the prices (high,medium,low) for each apartment indivisually\n",
+    "\n",
     "num_categories = 3\n",
     "df['Price Category'] = pd.qcut(df['price'], q=num_categories, labels=['low', 'medium', 'high'])\n",
     "df['Price Category']\n",
@@ -127,6 +129,8 @@
     "    \n",
     "    plt.show()\n",
     "\n",
+    "\n",
+    "#dividing the prices to 3 categories and see the differnce between them in a graph\n",
     "prices_count=df['Price Category'].value_counts().unique()\n",
     "prices_type=df['Price Category'].unique()\n",
     "\n",
@@ -148,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -163,6 +167,7 @@
     }
    ],
    "source": [
+    "#see the relation between the reviews to the days occupied through scatter graph\n",
     "fig, ax = plt.subplots(figsize=(6,6))\n",
     "\n",
     "# Plot Days Occupied vs Reviews\n",
@@ -177,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -192,6 +197,7 @@
     }
    ],
    "source": [
+    "#see the relation betwwen the room type (which we want to anticipate) and the price with a scatter grpah\n",
     "fig, ax = plt.subplots(figsize=(6,6))\n",
     "# Plot Price vs Room type\n",
     "ax.scatter(df['room_type'], df['price'],alpha=0.4)\n",
@@ -205,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -220,6 +226,8 @@
     }
    ],
    "source": [
+    "#creating a heatmap to see the correlation between the days occupied and the apartment type in 2019\n",
+    "\n",
     "import seaborn as sns\n",
     "\n",
     "# Filter the DataFrame for the specified apartment types\n",
@@ -259,6 +267,8 @@
     }
    ],
    "source": [
+    "#this is a correlation matrix display with scatter graphs finding the correlation betweeen each two relevant columns\n",
+    "#obviously the correlation between the column and itself wont be scattered because its the same column\n",
     "columns = ['days_occupied_in_2019', 'price', 'availability_2020',\n",
     "           'minimum_nights', 'number_of_reviews', 'reviews_per_month']\n",
     "\n",
@@ -275,6 +285,271 @@
     "\n",
     "# Show the scatter matrix plot\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>neighbourhood</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>room_type</th>\n",
+       "      <th>price</th>\n",
+       "      <th>days_occupied_in_2019</th>\n",
+       "      <th>minimum_nights</th>\n",
+       "      <th>number_of_reviews</th>\n",
+       "      <th>reviews_per_month</th>\n",
+       "      <th>availability_2020</th>\n",
+       "      <th>Price Category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2595</td>\n",
+       "      <td>Midtown</td>\n",
+       "      <td>40.75362</td>\n",
+       "      <td>-73.98377</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>225</td>\n",
+       "      <td>15</td>\n",
+       "      <td>10</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>1</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3831</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>40.68514</td>\n",
+       "      <td>-73.95976</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>89</td>\n",
+       "      <td>188</td>\n",
+       "      <td>1</td>\n",
+       "      <td>295</td>\n",
+       "      <td>4.67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5099</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>40.74767</td>\n",
+       "      <td>-73.97500</td>\n",
+       "      <td>Entire home/apt</td>\n",
+       "      <td>200</td>\n",
+       "      <td>362</td>\n",
+       "      <td>3</td>\n",
+       "      <td>78</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>19</td>\n",
+       "      <td>high</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5121</td>\n",
+       "      <td>Bedford-Stuyvesant</td>\n",
+       "      <td>40.68688</td>\n",
+       "      <td>-73.95596</td>\n",
+       "      <td>Private room</td>\n",
+       "      <td>60</td>\n",
+       "      <td>0</td>\n",
+       "      <td>29</td>\n",
+       "      <td>49</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>365</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5178</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>40.76489</td>\n",
+       "      <td>-73.98493</td>\n",
+       "      <td>Private room</td>\n",
+       "      <td>79</td>\n",
+       "      <td>141</td>\n",
+       "      <td>2</td>\n",
+       "      <td>454</td>\n",
+       "      <td>3.52</td>\n",
+       "      <td>242</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17609</th>\n",
+       "      <td>23691588</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>40.69312</td>\n",
+       "      <td>-73.94073</td>\n",
+       "      <td>Shared room</td>\n",
+       "      <td>32</td>\n",
+       "      <td>9</td>\n",
+       "      <td>31</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>1</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17610</th>\n",
+       "      <td>14712466</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>40.65446</td>\n",
+       "      <td>-73.92613</td>\n",
+       "      <td>Shared room</td>\n",
+       "      <td>99</td>\n",
+       "      <td>7</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0</td>\n",
+       "      <td>medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17611</th>\n",
+       "      <td>23184420</td>\n",
+       "      <td>Lower East Side</td>\n",
+       "      <td>40.71172</td>\n",
+       "      <td>-73.98864</td>\n",
+       "      <td>Shared room</td>\n",
+       "      <td>41</td>\n",
+       "      <td>14</td>\n",
+       "      <td>180</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>365</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17612</th>\n",
+       "      <td>24555212</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>40.71113</td>\n",
+       "      <td>-73.98840</td>\n",
+       "      <td>Shared room</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>180</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>365</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17613</th>\n",
+       "      <td>21628183</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>40.71165</td>\n",
+       "      <td>-73.98708</td>\n",
+       "      <td>Shared room</td>\n",
+       "      <td>41</td>\n",
+       "      <td>124</td>\n",
+       "      <td>180</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>351</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>17614 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             id       neighbourhood  latitude  longitude        room_type   \n",
+       "0          2595             Midtown  40.75362  -73.98377  Entire home/apt  \\\n",
+       "1          3831            Brooklyn  40.68514  -73.95976  Entire home/apt   \n",
+       "2          5099           Manhattan  40.74767  -73.97500  Entire home/apt   \n",
+       "3          5121  Bedford-Stuyvesant  40.68688  -73.95596     Private room   \n",
+       "4          5178           Manhattan  40.76489  -73.98493     Private room   \n",
+       "...         ...                 ...       ...        ...              ...   \n",
+       "17609  23691588            Brooklyn  40.69312  -73.94073      Shared room   \n",
+       "17610  14712466            Brooklyn  40.65446  -73.92613      Shared room   \n",
+       "17611  23184420     Lower East Side  40.71172  -73.98864      Shared room   \n",
+       "17612  24555212           Manhattan  40.71113  -73.98840      Shared room   \n",
+       "17613  21628183           Manhattan  40.71165  -73.98708      Shared room   \n",
+       "\n",
+       "       price  days_occupied_in_2019  minimum_nights  number_of_reviews   \n",
+       "0        225                     15              10                 48  \\\n",
+       "1         89                    188               1                295   \n",
+       "2        200                    362               3                 78   \n",
+       "3         60                      0              29                 49   \n",
+       "4         79                    141               2                454   \n",
+       "...      ...                    ...             ...                ...   \n",
+       "17609     32                      9              31                  5   \n",
+       "17610     99                      7             100                  1   \n",
+       "17611     41                     14             180                  2   \n",
+       "17612     38                      0             180                  1   \n",
+       "17613     41                    124             180                  3   \n",
+       "\n",
+       "       reviews_per_month  availability_2020 Price Category  \n",
+       "0                   0.39                  1           high  \n",
+       "1                   4.67                  1         medium  \n",
+       "2                   0.60                 19           high  \n",
+       "3                   0.38                365            low  \n",
+       "4                   3.52                242            low  \n",
+       "...                  ...                ...            ...  \n",
+       "17609               0.26                  1            low  \n",
+       "17610               0.03                  0         medium  \n",
+       "17611               0.12                365            low  \n",
+       "17612               0.27                365            low  \n",
+       "17613               0.13                351            low  \n",
+       "\n",
+       "[17614 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df = df.drop([\"F1\",\"id\",\"neighbourhood\"], axis = 1)\n",
+    "# correlation_matrix = df.corr()\n",
+    "new_df"
    ]
   }
  ],
